P23: атомарное исполнение и отмена демонстрационного перевода
